--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
-# Python
-
-__pycache__/
-
-# ENVIRONMENT
-
+.vscode
 .env
+
+# venv
 .venv
-env/
-venv/
-brewwapp-venv/
-ENV/
-env.bak/
-venv.bak/
+
+# python
+__pycache__
+
+.pytest_cache
