--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 atomicwrites==1.4.0
 attrs==20.2.0
+cffi==1.14.3
 colorama==0.4.4
+cryptography==3.1.1
 iniconfig==1.1.1
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
+pycparser==2.20
 PyMySQL==0.10.1
 pyparsing==2.4.7
 pytest==6.1.1
