--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-atomicwrites==1.4.0
-attrs==20.2.0
-colorama==0.4.4
-iniconfig==1.1.1
-packaging==20.4
-pluggy==0.13.1
-py==1.9.0
-PyMySQL==0.10.1
-pyparsing==2.4.7
-pytest==6.1.1
-six==1.15.0
-toml==0.10.1
+appdirs==1.4.4
+black==20.8b1
+click==7.1.2
+flake8==3.9.0
+isort==5.8.0
+mccabe==0.6.1
+mypy==0.812
+mypy-extensions==0.4.3
+pathspec==0.8.1
+pycodestyle==2.7.0
+pyflakes==2.3.1
+PyMySQL==1.0.2
+regex==2021.3.17
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
